# Automation

./: .bashrc  README.md  auto.sh  config  init.lua  mvsc.sh
Installation/: nixos_default.sh
Scripts/: encrypt.sh  fk.sh  llmopen.sh  na.sh  nixup.sh  ob.sh  obde.sh  oben.sh  pdfsplit.sh  rebuild.sh  startcpp.sh
Scripts/files/: CMakeLists.txt  startcpp.nix
Setup/: git_setup.sh  ubuntu_i3wm_setup.sh
